# gougou

./: CODEX_MASTER_SPEC.md  PHASE5_PROGRESS.md  PHASE6_PROGRESS.md  PROJECT_STATUS.md  README.md  package-lock.json  package.json
docs/archive/: PHASE5_IMPLEMENTATION_2026-07.md
docs/validation/: ANDROID_ALPHA_2026-07.md
plugins/gougou-reminder/: Cargo.toml  README.md  build.rs
plugins/gougou-reminder/android/: build.gradle.kts
plugins/gougou-reminder/android/src/androidTest/java/: ExampleInstrumentedTest.kt
plugins/gougou-reminder/android/src/main/: AndroidManifest.xml
plugins/gougou-reminder/android/src/main/java/: GougouReminderPlugin.kt  ReminderBootReceiver.kt  ReminderReceiver.kt  ReminderScheduler.kt
plugins/gougou-reminder/android/src/test/java/: ExampleUnitTest.kt
plugins/gougou-reminder/ios/: Package.swift  README.md
plugins/gougou-reminder/ios/Sources/: GougouReminderPlugin.swift
plugins/gougou-reminder/permissions/autogenerated/: reference.md
plugins/gougou-reminder/permissions/autogenerated/commands/: cancel_all.toml  open_background_settings.toml  sync_schedule.toml  take_notification_target.toml
plugins/gougou-reminder/permissions/schemas/: schema.json
plugins/gougou-reminder/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
src/: App.css  App.tsx  BackupTestView.tsx  EditorView.tsx  SettingsView.tsx  ipcError.ts  main.tsx  settings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: mobile.json
src-tauri/src/: lib.rs  main.rs
