[package]
name = "gougou"
version = "0.1.0"
description = "A local-first diary"
authors = ["ym0523Lv"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gougou_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tauri = { version = "2", features = [] }
rusqlite = { version = "0.37", features = ["bundled"] }
pulldown-cmark = "0.13"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
infer = "0.19"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2.5.1"
tauri-plugin-biometric = "2.3.2"
tauri-plugin-gougou-reminder = { path = "../plugins/gougou-reminder" }
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
